--- a/style.css
+++ b/style.css
@@ -1449,16 +1449,12 @@ body.about-me .main-section .dot-wrapper.one-joke {
   }
 }
 
-body.about-me p {
-  width: 50%;
-}
-
 .main-wrapper {
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
   padding: 1rem;
   width: 60%;
 }
@@ -1468,6 +1464,7 @@ body.about-me .text-wrapper {
   flex-flow: column;
   align-items: center;
   gap: 1rem;
+  text-align: center;
 }
 
 body.about-me .text-wrapper p {
@@ -1484,6 +1481,123 @@ body.about-me .text-wrapper p i {
 }
 body.about-me .text-wrapper p span {
   font-size: 0.85rem;
+}
+
+.about-me-grid {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 1rem;
+}
+.about-me-grid .about-me-cell {
+  border-radius: 0.5rem;
+}
+.about-me-grid .about-me-cell p {
+  width: 100%;
+}
+.about-me-grid .about-me-cell.about-me, .about-me-grid .about-me-cell.honest-me, .about-me-grid .about-me-cell.joke {
+  grid-column: 1/2;
+  opacity: 0.5;
+  white-space: nowrap;
+}
+.about-me-grid .about-me-cell.about-me p, .about-me-grid .about-me-cell.honest-me p, .about-me-grid .about-me-cell.joke p {
+  text-align: center;
+}
+.about-me-grid .about-me-cell.content {
+  grid-column: 2/-1;
+  grid-row: 1/-1;
+  background-color: #101010;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about-me-grid .about-me-cell.content p {
+  width: fit-content;
+  opacity: 0.5;
+}
+
+.pushable {
+  position: relative;
+  border: none;
+  background: transparent;
+  padding: 0;
+  cursor: pointer;
+  outline-offset: 4px;
+  transition: filter 250ms;
+  width: 100%;
+}
+
+.shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  background: hsla(0, 0%, 0%, 0.25);
+  will-change: transform;
+  transform: translateY(2px);
+  transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+}
+
+.edge {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  background: linear-gradient(to left, hsl(0, 0%, 16%) 0%, #070707 8%, #070707 92%, hsl(0, 0%, 16%) 100%);
+}
+
+.front {
+  display: block;
+  position: relative;
+  padding: 12px 42px;
+  border-radius: 12px;
+  font-size: 1.25rem;
+  color: white;
+  background: #101010;
+  will-change: transform;
+  transform: translateY(-4px);
+  transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+}
+
+.pushable:hover {
+  filter: brightness(110%);
+}
+
+.pushable:hover p {
+  opacity: 1;
+}
+
+.pushable:hover .front {
+  transform: translateY(-6px);
+  transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
+
+.pushable:active .front {
+  transform: translateY(-2px);
+  transition: transform 34ms;
+}
+
+.pushable:hover .shadow {
+  transform: translateY(4px);
+  transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
+
+.pushable:active .shadow {
+  transform: translateY(1px);
+  transition: transform 34ms;
+}
+
+.pushable:focus:not(:focus-visible) {
+  outline: none;
+}
+
+body.about-me .progress-bar-container {
+  justify-content: end;
 }
 
 /*ACCESSIBILITY==================*/
