--- a/style.css
+++ b/style.css
@@ -1376,44 +1376,6 @@ body.about-me .main-section .portrait-wrapper .picture-container::after {
   background: linear-gradient(rgba(0, 0, 0, 0) 60%, #0A0A0A 100%);
   z-index: 2;
 }
-body.about-me .main-section .dot-wrapper {
-  position: absolute;
-  left: 15%;
-  z-index: 10;
-}
-body.about-me .main-section .dot-wrapper:hover .dot {
-  background-color: #EC5663;
-  cursor: pointer;
-}
-body.about-me .main-section .dot-wrapper:hover .dot::after {
-  opacity: 1;
-}
-body.about-me .main-section .dot-wrapper .dot {
-  width: 2rem;
-  height: 2rem;
-  border: #EC5663 2px solid;
-  border-radius: 50%;
-}
-body.about-me .main-section .dot-wrapper.honest-me {
-  left: 50%;
-  top: 100%;
-  transform: translateX(-50%);
-}
-body.about-me .main-section .dot-wrapper.honest-me::after {
-  content: "Honest Me";
-  position: absolute;
-  color: #EC5663;
-  bottom: -120%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  white-space: nowrap;
-  opacity: 0;
-  pointer-events: none;
-}
-body.about-me .main-section .dot-wrapper.one-joke {
-  left: 85%;
-  transform: translateX(-50%);
-}
 
 body.about-me .main-wrapper {
   display: flex;
@@ -1424,7 +1386,6 @@ body.about-me .main-wrapper {
   padding: 1rem;
   width: 40%;
 }
-
 body.about-me .text-wrapper {
   display: flex;
   flex-flow: column;
@@ -1450,9 +1411,13 @@ body.about-me .text-wrapper p span {
 }
 
 .about-me-grid {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  display: flex;
+  width: 100%;
+  gap: 1rem;
+}
+.about-me-grid .buttons-wrapper {
+  display: flex;
+  flex-flow: column nowrap;
   gap: 1rem;
 }
 .about-me-grid .about-me-cell {
@@ -1462,7 +1427,6 @@ body.about-me .text-wrapper p span {
   width: 100%;
 }
 .about-me-grid .about-me-cell.about-me, .about-me-grid .about-me-cell.honest-me, .about-me-grid .about-me-cell.joke {
-  grid-column: 1/2;
   opacity: 0.5;
   white-space: nowrap;
 }
@@ -1470,13 +1434,12 @@ body.about-me .text-wrapper p span {
   text-align: center;
 }
 .about-me-grid .about-me-cell.content {
-  grid-column: 2/-1;
-  grid-row: 1/-1;
   background-color: #101010;
   padding: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-grow: 2;
 }
 .about-me-grid .about-me-cell.content p {
   width: fit-content;
