JS: Improved Jokes section

--- a/sass/pages/_about-me.scss
+++ b/sass/pages/_about-me.scss
@@ -144,6 +144,7 @@ body.about-me .text-wrapper p {
         p {
             width: fit-content;
             opacity: 0.5;
+            text-align: center;
         }
     }
 }
