--- a/sass/illustrations/_starship.scss
+++ b/sass/illustrations/_starship.scss
@@ -13,41 +13,6 @@
     transform: translate(-50%, -50%);
 }
 
-.starship-system.floating {
-        animation-name: floating;
-        animation-duration: 4s;
-        animation-iteration-count: infinite;
-        animation-timing-function: ease-in-out;
-
-        @keyframes floating {
-            0% { transform: translate(-54%,  -50%); }
-            50%  { transform: translate(-46%, -48%); }
-            100%   { transform: translate(-50%, -50%); }    
-        }     
-}
-
-.starship-system.shaking {
-        animation-name: shaking;
-        animation-duration: 0.5s;
-        animation-iteration-count: infinite;
-
-    @keyframes shaking {
-        0% { transform: translate(1px, 1px) rotate(0deg); }
-        10% { transform: translate(-1px, -2px) rotate(-1deg); }
-        20% { transform: translate(-3px, 0px) rotate(1deg); }
-        30% { transform: translate(3px, 2px) rotate(0deg); }
-        40% { transform: translate(1px, -1px) rotate(1deg); }
-        50% { transform: translate(-1px, 2px) rotate(-1deg); }
-        60% { transform: translate(-3px, 1px) rotate(0deg); }
-        70% { transform: translate(3px, 1px) rotate(-1deg); }
-        80% { transform: translate(-1px, -1px) rotate(1deg); }
-        90% { transform: translate(1px, 2px) rotate(0deg); }
-        100% { transform: translate(1px, -2px) rotate(-1deg); }
-      }
-}
-
-
-
 .starship-container, .booster-container {
     width: 65px;
     overflow: hidden;
@@ -57,15 +22,18 @@
     }
 }
 
-.starship-container {
+.starship-and-flames, .booster-and-flames {
+    width: 65px;
+}
+
+.starship-and-flames, .starship-container {
     height: 195px;
 }
 
-.booster-container {
+.booster-and-flames, .booster-container {
     height: 255px;
     position: absolute; 
-    top: 95%;
-    // transform-origin: center;
+    top: 41%;
 }
 
 .rotating {
@@ -114,9 +82,9 @@
 // STAGE SEPARATION===============
 .starship-system {
 
-    .starship-container.stage-separation {
+    .starship-and-flames.stage-separation {
         transform: translate(0%, 100%);
-        animation: starshipSeparation 8000ms 1;
+        animation: starshipSeparation 6000ms 1;
 
         @keyframes starshipSeparation {
             0% {
@@ -134,7 +102,7 @@
         }
     }
 
-    .booster-container.stage-separation {
+    .booster-and-flames.stage-separation {
         transform: translate(-60%, 500%);
         animation: boosterSeparation 8000ms 1;
 
@@ -158,27 +126,28 @@
 
 
 // STAGE 2 FLYING OUT=============
-.starship-system {
-
-    .starship-container.flying-out {
-        transform: translate(0%, 100%);
-        animation: stageTwoFlyingOut 2000ms 1;
+.starship-system.flying-out {
+        transform: translate(0%, 0%);
+        animation: stageTwoFlyingOut 4000ms 1;
 
         @keyframes stageTwoFlyingOut {
             0% {
-                transform: translate(0%, 100%);
+                transform: translate(-50%, -50%);
                 rotate: 0deg;
             }
             40% {
-                transform: translate(-10%, 120%);
+                transform: translate(-50%, 150%);
                 rotate: 5deg;
+                opacity: 1;
+            }
+            80% {
+                opacity: 0;
             }
             100% {
-                transform: translate(100%, -350%);
-                rotate: 15deg;
+                transform: translate(-50%, -850%);
+                rotate: 0deg;
             }
         }
-    }
 }
 
 
